# price-net

./: .gitignore  README.md  pyproject.toml
configs/: sample_config.yaml
configs/eval/: easy-ocr-text-based-attribution.yaml  gemini-flash-text-based-attribution.yaml  gemini-pro-text-based-attribution.yaml
configs/extraction/: easy_ocr.yaml  gemini_2.0_flash.yaml  gemini_2.0_flash_plus.yaml  gemini_2.5_flash.yaml  gemini_2.5_flash_plus.yaml  gemini_2.5_pro.yaml
notebooks/: data_viewer.ipynb  hough_line_viewer.ipynb  predictions_viewer.ipynb  vlm_baseline.ipynb
outputs/extraction/: easy_ocr.json  gemini_2.0_flash.json  gemini_2.5_flash.json  gemini_2.5_flash_plus.json  gemini_2.5_pro.json  google_ocr.json
prompts/: attribute_products_and_prices_from_image.txt
results/everything/: eval_metrics.yaml
results/extraction/: easy_ocr.json  gemini-2.0-flash-0.json  gemini-2.5-flash-0.json  gemini-2.5-pro-0.json  gemini_2.0_flash.json  gemini_2.5_flash.json  gemini_2.5_flash_plus.json  gemini_2.5_pro.json  google_ocr.json  price-extraction-v12-0.json  price-extraction-v13-0.json  test-run.json
results/gemini+easyocr/: attribution_metrics.yaml  eval_metrics.yaml
results/gemini-flash/: attribution_metrics.yaml  eval_metrics.yaml
results/gemini-flash-0/: attribution_metrics.yaml
results/gemini-flash-1/: attribution_metrics.yaml
results/gemini-flash-2/: attribution_metrics.yaml
results/gemini-flash-3/: attribution_metrics.yaml
results/gemini-flash-4/: attribution_metrics.yaml
results/gemini-pro-0/: attribution_metrics.yaml
results/gemini-pro-1/: attribution_metrics.yaml
results/gemini-pro-2/: attribution_metrics.yaml
results/gemini-pro-3/: attribution_metrics.yaml
tests/: test_dataset.py
(+440 files in other folders)
