[project]
name = "price-net"
version = "0.1.0"
description = "Official implementation of 'Learnable Product-Price Attribution for Retail Shelf Images'."
readme = "README.md"
authors = [
    { name = "Spencer Young", email = "spencermyoung513@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "ipynb>=0.5.1",
    "ipywidgets>=8.1.7",
    "lightning>=2.5.2",
    "matplotlib>=3.10.3",
    "notebook>=7.4.4",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "polars>=1.31.0",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "ruff>=0.12.1",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "wandb>=0.21.0",
]

[project.scripts]
train = "price_net.scripts.train:main"
evaluate = "price_net.scripts.evaluate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
